--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <div class="container blockleft">
                 <div class="left">
                     <h3>Control the localization process</h3>
-                    <p2>Collaborate with your team in a single workspace. Add and assign <span
+                    <p class="p2">Collaborate with your team in a single workspace. Add and assign <span
                             class="underline">tasks</span>, track
                         progress, and
-                        enjoy a seamless localization workflow where you know who is doing what and when.</p2>
+                        enjoy a seamless localization workflow where you know who is doing what and when.</p>
                     <a class="start" href="">Start now</a>
                 </div>
                 <div class="bcg-image">
@@ -77,25 +77,25 @@
                 </div>
                 <div class="right">
                     <h3>Shorten time to market</h3>
-                    <p2>Localize your product in parallel with the development cycle. Use the <span
+                    <p class="p2">Localize your product in parallel with the development cycle. Use the <span
                             class="underline">Adobe XD</span>,
                         <span class="underline">Figma</span>, and <span class="underline">Sketch</span> plugins to start
                         working on translations as soon as
                         the product design is ready. No more
                         idle waiting.
-                    </p2>
+                    </p>
                     <a class="start" href="">Start now</a>
                 </div>
             </div>
             <div class="container blockleft">
                 <div class="left">
                     <h3>Ensure quality</h3>
-                    <p2>Use built-in tools — e.g. <span class="underline">translation memory</span>, machine
+                    <p class="p2">Use built-in tools — e.g. <span class="underline">translation memory</span>, machine
                         translation, and <span class="underline">QA
                             checks</span> — to enhance the quality and cohesion of translations. Add product
                         <span class="underline">screenshots</span> for
                         context and use the<span class="underline"> in-context editors</span> for instant previews.
-                    </p2>
+                    </p>
                     <a class="start" href="">Start now</a>
                 </div>
                 <div class="bcg-image">
@@ -105,7 +105,7 @@
             <div class="container blockright">
                 <div class="leftimage">
                     <div class="imageinside">
-                        <p3><span class="blue">$client</span> <span class="green">=</span>
+                        <p class="p3"><span class="blue">$client</span> <span class="green">=</span>
                             new<span class="violet">\Lokalise\LokaliseApiClient</span> <span class="green">(</span><span
                                 class="blue">$token</span><span class="green">);</span>
                             <br>
@@ -115,27 +115,28 @@
                                 class="green">-></span>
                             download <span class="green">(</span>
                             <br>
-                            <div class="indent"><span class="blue">$projectId</span> <span class="green"> ,</span><br>
-                                <span class="green">[</span><br>
-                                <span class="blue1">'format'</span> <span class="green">=></span> <span
-                                    class="blue1">'json'</span> <span class="green">,</span><br>
-                                <span class="green">]</span><br>
-                            </div>
-                            <span class="green">);</span>
-                        </p3>
+                        <div class="indent"><span class="blue">$projectId</span> <span class="green"> ,</span><br>
+                            <span class="green">[</span><br>
+                            <span class="blue1">'format'</span> <span class="green">=></span> <span
+                                class="blue1">'json'</span> <span class="green">,</span><br>
+                            <span class="green">]</span><br>
+                        </div>
+                        <span class="green">);</span>
+                        </p>
                     </div>
                     <a id="php" href="">php</a>
                 </div>
                 <div class="right">
                     <h3>Less work for developers</h3>
-                    <p2>Eliminate the hassle of localization and let developers get back to their main tasks. Save hours
+                    <p class="p2">Eliminate the hassle of localization and let developers get back to their main tasks.
+                        Save hours
                         with the powerful <span class="underline">API</span>, <span class="underline">CLI</span>, <span
                             class="underline">mobile SDKs</span>, and integrations
                         with <span class="underline">GitHub</span>,
                         <span class="underline">Bitbucket</span>,
                         <span class="underline">JIRA</span>, and
                         more.
-                    </p2>
+                    </p>
                     <a class="start" href="">Start now</a>
                 </div>
             </div>
@@ -150,7 +151,8 @@
                             <h5>Web apps</h5>
                         </a>
                         <a href="">
-                            <p4>Any kind of web apps — backend, frontend, single page, blogs — you name it.</p4>
+                            <p class="p4">Any kind of web apps — backend, frontend, single page, blogs — you name it.
+                            </p>
                         </a>
                     </div>
                     <div class="card">
@@ -159,9 +161,10 @@
                             <h5>Mobile apps</h5>
                         </a>
                         <a href="">
-                            <p4>Upload any mobile platform language files. Embed <span class="underline">Lokalise iOS
+                            <p class="p4">Upload any mobile platform language files. Embed <span
+                                    class="underline">Lokalise iOS
                                     SDK</span> or <span class="underline">Lokalise Android
-                                    SDK</span> if you prefer. </p4>
+                                    SDK</span> if you prefer. </p>
                         </a>
                     </div>
                     <div class="card">
@@ -170,7 +173,8 @@
                             <h5>Games</h5>
                         </a>
                         <a href="">
-                            <p4>Our cloud software is trusted by many leading game developers around the world.</p4>
+                            <p class="p4">Our cloud software is trusted by many leading game developers around the
+                                world.</p>
                         </a>
                     </div>
                     <div class="card">
@@ -179,7 +183,7 @@
                             <h5>Documents</h5>
                         </a>
                         <a href="">
-                            <p4>Upload your DOCX and static HTML files.</p4>
+                            <p class="p4">Upload your DOCX and static HTML files.</p>
                         </a>
                     </div>
                     <div class="card">
@@ -188,8 +192,9 @@
                             <h5>Marketing e-mails</h5>
                         </a>
                         <a href="">
-                            <p4>Integrate with Salesforce Marketing Cloud (coming soon) or translate static e-mails.
-                            </p4>
+                            <p class="p4">Integrate with Salesforce Marketing Cloud (coming soon) or translate static
+                                e-mails.
+                            </p>
                         </a>
                     </div>
                     <div class="card">
@@ -198,7 +203,7 @@
                             <h5>IoT</h5>
                         </a>
                         <a href="">
-                            <p4>We support most popular localization file formats.</p4>
+                            <p class="p4">We support most popular localization file formats.</p>
                         </a>
                     </div>
                 </div>
@@ -217,9 +222,10 @@
                         <h4>Managers</h4>
                     </a>
                     <a href="">
-                        <p2>Update existing and launch new features and products while simultaneously localizing them in
+                        <p class="p2">Update existing and launch new features and products while simultaneously
+                            localizing them in
                             multiple languages. Streamline your team's workflow, maximize productivity, and speed up
-                            expansion to other markets.</p2>
+                            expansion to other markets.</p>
                     </a>
                     <a class="learn" href="">Learn more</a>
                 </div>
@@ -231,11 +237,12 @@
                         <h4>Developers</h4>
                     </a>
                     <a href="">
-                        <p2>Set up an integration with your code repository or your own custom SDK via Lokalise's
+                        <p class="p2">Set up an integration with your code repository or your own custom SDK via
+                            Lokalise's
                             <span class="underline">powerful API</span>. Do that once, and every time you make changes
                             in the code, they'll be
                             automatically imported to Lokalise for translation.
-                        </p2>
+                        </p>
                     </a>
                     <a class="learn" href="">Learn more</a>
                 </div>
@@ -247,9 +254,10 @@
                         <h4>Translators</h4>
                     </a>
                     <a href="">
-                        <p2>Eliminate double-work and neverending revisions with visual context (screenshots) and live
+                        <p class="p2">Eliminate double-work and neverending revisions with visual context (screenshots)
+                            and live
                             previews. Improve the quality and speed of your translations with built-in CAT tools, like
-                            autocomplete, inline machine translation, and translation memory.</p2>
+                            autocomplete, inline machine translation, and translation memory.</p>
                     </a>
                     <a class="learn" href="">Learn more</a>
                 </div>
@@ -278,7 +286,7 @@
                         <img src="./assets/cake.png" alt="">
                     </a>
                     <a href="">
-                        <h4 id="cake">The most-loved translation management software</h6>
+                        <h4 id="cake">The most-loved translation management software</h4>
                     </a>
                 </div>
                 <div class="part2">
@@ -292,32 +300,105 @@
             </div>
         </div>
         <div class="section5">
-            <div class="container2 worktools">
-                <h1>Integrate Lokalise with your work tools</h1>
-                <p>Automate processes, eliminate routine tasks, and track progress with ease.</p>
-                <img src="./assets/worktools.png" alt="">
+            <div class="container worktools">
+                <a href="">
+                    <h1>Integrate Lokalise with your work tools</h1>
+                </a>
+                <a href="">
+                    <p>Automate processes, eliminate routine tasks, and track progress with ease.</p>
+                </a>
+                <div class="toolsimg">
+                    <img src="./assets/worktools.png" alt="">
+                </div>
                 <button class="orangebtn">See all integrations</button>
             </div>
         </div>
         <div class="orangesection">
-            <div class="container2 flexbox-column">
-                <h1>Localization made easy. Why wait?</h1>
-                <p2>Try for free or let us show you how it works.</p2>
+            <div class="container flexbox-column">
+                <a href="">
+                    <h1>Localization made easy. Why wait?</h1>
+                </a>
+                <a href="">
+                    <p class="p2">Try for free or let us show you how it works.</p>
+                </a>
                 <button class="blackbtn">Try it free</button>
             </div>
         </div>
-        <padding>
-            <div class="top">
-                <div class="paddingcolumn"></div>
-                <div class="paddingcards">
-                    <div class="paddingcard"></div>
-                    <div class="paddingcard"></div>
-                    <div class="paddingcard"></div>
-                    <div class="paddingcard"></div>
+        <footer class="footer">
+            <div class="container footertop">
+                <div class="footercolumn">
+                    <a href="">
+                        <h3 id="case">Case Studies</h3>
+                    </a>
+                    <a href=""><img src="./assets/footerimg.png" alt=""> </a>
+                    <a href=""><img id="smallspec" src="./assets/specialized.png" alt=""> </a>
+                    <a href="">
+                        <p class="p2">Riding towards global success with a 100% teammate enthusiasm</p>
+                    </a>
+                    <a class="start" href="">Read more</a>
+                </div>
+                <div class="footercards">
+                    <div class="footercard">
+                        <a class="start" href="">Product</a>
+                        <ul>
+                            <li>For developers</li>
+                            <li>For managers</li>
+                            <li>For translators</li>
+                            <li>For designers</li>
+                            <li>Integrations</li>
+                            <li>Security</li>
+                            <li>Pricing</li>
+                            <li>Automations</li>
+                        </ul>
+                    </div>
+                    <div class="footercard">
+                        <a class="start" href="">Support</a>
+                        <ul>
+                            <li>Contact</li>
+                            <li>Documentation</li>
+                            <li>Status</li>
+                            <li>Product Updates</li>
+                            <li>CLI Tool</li>
+                            <li>API Reference</li>
+                            <li>iOS and Android SDK</li>
+                            <li>Supported File Formats</li>
+                        </ul>
+                    </div>
+                    <div class="footercard">
+                        <a class="start" href="">Company</a>
+                        <ul>
+                            <li>About</li>
+                            <li>Blog</li>
+                            <li>Careers | We`re Hiring</li>
+                            <li>Case Studies</li>
+                            <li>Media Kit</li>
+                        </ul>
+                    </div>
+                    <div class="footercard">
+                        <a class="start" href="">Legal</a>
+                        <ul>
+                            <li>Terms of Service</li>
+                            <li>Privacy Policy</li>
+                            <li>Cookie Policy</li>
+                            <li>Privacy Shield</li>
+                            <li>DPA</li>
+                            <li>List of Sub-processors</li>
+                            <li>Candidates Privacy Notice</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="bottom"></div>
-        </padding>
+            <div class="container footerbottom">
+                <div class="bottomleft">
+                    <a href=""><img src="./assets/bottomlogo.png" alt=""></a>
+                    <a class="bottomfont" href="">Localization workflow for your web and mobile apps, games and digital
+                        content.</a>
+                </div>
+                <div class="bottomright">
+                    <a class="bottomfont" href="">©2001-2020 All rights reserved.</a>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
