--- a/index.html
+++ b/index.html
@@ -11,45 +11,45 @@
 
 <body>
     <div class="page-wrap">
-        <header class="header">
-            <div class="nav-top">
-                <div class="top-links">
-                    <a href=""><img src="./assets/logo.png" alt=""></a>
+        <header class="header flex-container">
+            <div class="container-large flex-container">
+                <div class="top-links flex-container">
+                    <a href=""><img src="./assets/logo.svg" alt=""></a>
                     <a href="">Product</a>
                     <a href="">Features</a>
                     <a href="">Pricing</a>
                     <a href="">Case studies</a>
                     <a href="">Resources</a>
                 </div>
-                <div class="top-buttons">
-                    <button class="whitebtn">Log in</button>
-                    <button class="orangebtn">Try it free</button>
+                <div class="top-buttons flex-container">
+                    <button class="btn btn--white btn--top">Log in</button>
+                    <button class="btn btn--orange btn--top">Try it free</button>
                 </div>
             </div>
         </header>
         <main class="main">
             <div class="container">
-                <div class="main-content">
-                    <div class="section1">
+                <section class="main-content flex-container">
+                    <div class="section1 flex-column">
                         <h1>Accelerate localization from code to delivery</h1>
                         <p>A localization and translation management platform for agile teams. Embrace automation,
                             workflow transparency, and fast project delivery.</p>
                         <div class="section1-btns">
-                            <button class="orangebtn">Try it free</button>
-                            <button class="whitebtn">Book a demo</button>
+                            <button class="btn btn--orange">Try it free</button>
+                            <button class="btn btn--white">Book a demo</button>
                         </div>
                         <a href="">Try all features for 14 days · No credit card required</a>
                     </div>
                     <div class="bcg-image">
                         <img src="./assets/main.jpg" alt="">
                     </div>
-                </div>
+                </section>
             </div>
-            <div class="orangesection">
+            <section class="orangesection flex-column">
                 <div class="container orangesection-block1">
-                    <a href="">The preferred localization tool of 1500+ companies</a>
+                    <h3>The preferred localization tool of 1500+ companies</h3>
                 </div>
-                <div class="container orangesection-block2">
+                <div class="container orangesection-block2 flex-container">
                     <a href=""><img src="./assets/specialized.png" alt=""></a>
                     <a href=""><img src="./assets/virgin.png" alt=""></a>
                     <a href=""><img src="./assets/tidal.png" alt=""></a>
@@ -57,9 +57,9 @@
                     <a href=""><img src="./assets/yelp.png" alt=""></a>
                     <a href=""><img src="./assets/daimler.png" alt=""></a>
                 </div>
-            </div>
-            <div class="container blockleft">
-                <div class="left">
+            </section>
+            <section class="container blockleft flex-container">
+                <div class="left flex-column">
                     <h3>Control the localization process</h3>
                     <p class="p2">Collaborate with your team in a single workspace. Add and assign <span
                             class="underline">tasks</span>, track
@@ -70,12 +70,12 @@
                 <div class="bcg-image">
                     <img src="./assets/projectapp.png" alt="">
                 </div>
-            </div>
-            <div class="container blockright">
+            </section>
+            <section class="container blockright flex-container">
                 <div class="bcg-image">
                     <img src="./assets/market.png" alt="">
                 </div>
-                <div class="right">
+                <div class="right flex-column">
                     <h3>Shorten time to market</h3>
                     <p class="p2">Localize your product in parallel with the development cycle. Use the <span
                             class="underline">Adobe XD</span>,
@@ -86,9 +86,9 @@
                     </p>
                     <a class="start" href="">Start now</a>
                 </div>
-            </div>
-            <div class="container blockleft">
-                <div class="left">
+            </section>
+            <section class="container blockleft flex-container">
+                <div class="left flex-column">
                     <h3>Ensure quality</h3>
                     <p class="p2">Use built-in tools — e.g. <span class="underline">translation memory</span>, machine
                         translation, and <span class="underline">QA
@@ -101,9 +101,9 @@
                 <div class="bcg-image">
                     <img src="./assets/quality.png" alt="">
                 </div>
-            </div>
-            <div class="container blockright">
-                <div class="leftimage">
+            </section>
+            <section class="container blockright flex-container">
+                <div class="leftimage flex-column">
                     <div class="imageinside">
                         <p class="p3"><span class="blue">$client</span> <span class="green">=</span>
                             new<span class="violet">\Lokalise\LokaliseApiClient</span> <span class="green">(</span><span
@@ -126,7 +126,7 @@
                     </div>
                     <a id="php" href="">php</a>
                 </div>
-                <div class="right">
+                <div class="right flex-column">
                     <h3>Less work for developers</h3>
                     <p class="p2">Eliminate the hassle of localization and let developers get back to their main tasks.
                         Save hours
@@ -139,13 +139,13 @@
                     </p>
                     <a class="start" href="">Start now</a>
                 </div>
-            </div>
+            </section>
         </main>
-        <div class="section3">
-            <div class="container localize">
+        <section class="section3 flex-column">
+            <div class="container localize flex-column">
                 <h3>What can you localize with Lokalise?</h3>
-                <div class="cards">
-                    <div class="card">
+                <div class="cards flex-container">
+                    <div class="card flex-column">
                         <a href=""><img src="./assets/web.png" alt=""></a>
                         <a href="">
                             <h5>Web apps</h5>
@@ -208,12 +208,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="section4">
-            <div class="container boost">
+        </section>
+        <section class="section4 flex-column">
+            <div class="container boost flex-column">
                 <h3>Boost your localization team’s productivity tenfold</h3>
             </div>
-            <div class="container cards2">
+            <div class="container cards2 flex-container">
                 <div class="card2">
                     <a href="">
                         <img src="./assets/managers.png" alt="">
@@ -229,7 +229,7 @@
                     </a>
                     <a class="learn" href="">Learn more</a>
                 </div>
-                <div class="card2">
+                <div class="card2 flex-column">
                     <a href="">
                         <img src="./assets/developers.png" alt="">
                     </a>
@@ -262,14 +262,14 @@
                     <a class="learn" href="">Learn more</a>
                 </div>
             </div>
-        </div>
-        <div class="revolut">
-            <div class="container cards3">
+        </section>
+        <section class="revolut">
+            <div class="container cards3 flex-container">
                 <div class="card3">
                     <h6>“Lokalise has turned a task we were dreading into an absolute pleasure. Great platform,
                         intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver,
                         and over-the-air updates are the icing on the cake.”</h6>
-                    <div class="chief">
+                    <div class="chief flex-column">
                         <a href="">Edward Cooper, Chief Mobile Officer</a>
                         <img src="./assets/revolut2.png" alt="">
                     </div>
@@ -278,10 +278,10 @@
                     <img src="./assets/chief.png" alt="">
                 </div>
             </div>
-        </div>
-        <div class="cake">
-            <div class="container content">
-                <div class="part1">
+        </section>
+        <section class="cake flex-container">
+            <div class="container content flex-container">
+                <div class="part1 flex-container">
                     <a href="">
                         <img src="./assets/cake.png" alt="">
                     </a>
@@ -289,7 +289,7 @@
                         <h4 id="cake">The most-loved translation management software</h4>
                     </a>
                 </div>
-                <div class="part2">
+                <div class="part2 flex-container">
                     <a href="">
                         <img src="./assets/g2.png" alt="">
                     </a>
@@ -298,9 +298,9 @@
                     </a>
                 </div>
             </div>
-        </div>
-        <div class="section5">
-            <div class="container worktools">
+        </section>
+        <section class="section5">
+            <div class="container worktools flex-column-center">
                 <a href="">
                     <h1>Integrate Lokalise with your work tools</h1>
                 </a>
@@ -310,23 +310,23 @@
                 <div class="toolsimg">
                     <img src="./assets/worktools.png" alt="">
                 </div>
-                <button class="orangebtn">See all integrations</button>
+                <button class="btn btn--orange">See all integrations</button>
             </div>
-        </div>
-        <div class="orangesection">
-            <div class="container flexbox-column">
+        </section>
+        <section class="orangesection">
+            <div class="container tryitfree">
                 <a href="">
                     <h1>Localization made easy. Why wait?</h1>
                 </a>
                 <a href="">
                     <p class="p2">Try for free or let us show you how it works.</p>
                 </a>
-                <button class="blackbtn">Try it free</button>
+                <button class="btn btn--black">Try it free</button>
             </div>
-        </div>
+        </section>
         <footer class="footer">
-            <div class="container footertop">
-                <div class="footercolumn">
+            <section class="container footertop">
+                <div class="footercolumn flex-column">
                     <a href="">
                         <h3 id="case">Case Studies</h3>
                     </a>
@@ -338,7 +338,7 @@
                     <a class="start" href="">Read more</a>
                 </div>
                 <div class="footercards">
-                    <div class="footercard">
+                    <div class="footercard flex-column">
                         <a class="start" href="">Product</a>
                         <ul>
                             <li>For developers</li>
@@ -351,7 +351,7 @@
                             <li>Automations</li>
                         </ul>
                     </div>
-                    <div class="footercard">
+                    <div class="footercard flex-column">
                         <a class="start" href="">Support</a>
                         <ul>
                             <li>Contact</li>
@@ -364,7 +364,7 @@
                             <li>Supported File Formats</li>
                         </ul>
                     </div>
-                    <div class="footercard">
+                    <div class="footercard flex-column">
                         <a class="start" href="">Company</a>
                         <ul>
                             <li>About</li>
@@ -374,7 +374,7 @@
                             <li>Media Kit</li>
                         </ul>
                     </div>
-                    <div class="footercard">
+                    <div class="footercard flex-column">
                         <a class="start" href="">Legal</a>
                         <ul>
                             <li>Terms of Service</li>
@@ -387,14 +387,14 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="container footerbottom">
-                <div class="bottomleft">
-                    <a href=""><img src="./assets/bottomlogo.png" alt=""></a>
+            </section>
+            <div class="container footerbottom flex-container">
+                <div class="bottomleft flex-container">
+                    <a href=""><img src="./assets/footerlogo.svg" alt=""></a>
                     <a class="bottomfont" href="">Localization workflow for your web and mobile apps, games and digital
                         content.</a>
                 </div>
-                <div class="bottomright">
+                <div class="bottomright flex-container">
                     <a class="bottomfont" href="">©2001-2020 All rights reserved.</a>
                 </div>
             </div>
